tests/neg/objects-subtyping.jo
type A = { var a: { val x: Int }  }

type B = { var a: { val x: Int, var y: Int } }

def main =
  val b: B = {
    var a = {
      val x = 1,
      var y = 2
    }
  }

  val a: A = b                   // error
  a.a = { val x = 5 }

  b.a.y p
